--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,16 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+
+.gallery {
+  display: flex;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
+}
+
+.gallery-item img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
